--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,6 +8,7 @@
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/introHCI.css" rel="stylesheet">
+
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -20,6 +21,9 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/introHCI.js"></script>
+	{{> facebook}}
+	<script src="/js/facebook.js"></script>
+
 </head>
 
 <body>
@@ -27,9 +31,13 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="jumbotron">
-			<h1 id="name">Scott Klemmer</h1>
+			<h1 id="name">Yi Li</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
-			<p class="facebookLogin">Please login through Facebook</p>
+			<p class="facebookLogin">Please login through Facebook
+				<br>
+				<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+			</fb:login-button>
+			</p>
 		</div>
 
 		<div id="facebookPhoto" class="profile">
@@ -45,7 +53,7 @@
 		<div class="project" id="{{id}}">
 			<div class="thumbnail">
 				<a href="#">
-					<img src="images/{{image}}" alt="Lorem Pixel image" class="img">
+					<img src="images/{{image}}" alt="Lorem Pixel image" class="detailsImage">
 					<p>{{name}}</p>
 				</a>
 				<div class="details"></div>
